--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,7 +4,7 @@ import BrandsTrack from '../components/BrandsTrack.astro';
 import FeatureList from '../components/FeatureList.astro';
 import PointsSection from '../components/PointsSection.astro';
 import ProblemSection from '../components/ProblemSection.astro';
-import BuildYourBrandSection from '../components/BuildYourBrandSection.astro';
+import BuildYourBrand from '../components/BuildYourBrand.astro';
 import StatsSocialProofSection from '../components/StatsSocialProofSection.astro';
 import WelcomeSection from '../components/WelcomeSection.astro';
 import FeaturesGridSection from '../components/FeaturesGridSection.astro';
@@ -24,7 +24,7 @@ import Footer from '../components/Footer.astro';
     <FeatureList />
     <PointsSection />
     <ProblemSection />
-    <BuildYourBrandSection />
+    <BuildYourBrand />
     <StatsSocialProofSection />
     <WelcomeSection />
     <FeaturesGridSection />
