--- a/src/components/TestimonialsSection.astro
+++ b/src/components/TestimonialsSection.astro
@@ -50,7 +50,7 @@ const featuredTestimonial = testimonials.find(t => t.featured);
 const regularTestimonials = testimonials.filter(t => !t.featured);
 ---
 
-<section class="relative w-full py-24 bg-gradient-to-br from-[#0a0a0f] via-[#1a1f2e] to-[#0f1419] overflow-hidden">
+<section id='testimonials' class="relative w-full py-24 bg-gradient-to-br from-[#0a0a0f] via-[#1a1f2e] to-[#0f1419] overflow-hidden">
     <!-- Subtle Background Elements -->
     <div class='absolute inset-0 opacity-10'>
         <div class='absolute top-32 left-32 w-64 h-64 bg-white/5 rounded-full blur-3xl'></div>
