--- a/src/components/CTAButton.astro
+++ b/src/components/CTAButton.astro
@@ -2,7 +2,7 @@
 export interface Props {
     href?: string;
 }
-const { href = '#' } = Astro.props;
+const { href = '/contact' } = Astro.props;
 ---
 
 <a
