--- a/src/components/FeatureList.astro
+++ b/src/components/FeatureList.astro
@@ -37,7 +37,7 @@ const features = [
 ];
 ---
 
-<section class='relative w-full py-20 bg-gradient-to-br from-[#0a0a0f] via-[#1a1f2e] to-[#0f1419] overflow-hidden'>
+<section id='features' class='relative w-full py-20 bg-gradient-to-br from-[#0a0a0f] via-[#1a1f2e] to-[#0f1419] overflow-hidden'>
     <!-- Background decorative elements -->
     <div class='absolute top-20 left-10 w-72 h-72 bg-orange-500/8 rounded-full blur-3xl'></div>
     <div class='absolute bottom-20 right-10 w-64 h-64 bg-yellow-500/6 rounded-full blur-3xl'></div>
